Fix alignment of elements in Experience and Education when submitted

--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -23,9 +23,8 @@
 
 .experience-info {
 	display: grid;
-	grid-template-columns: auto auto;
+	grid-template-columns: 10rem auto;
 	justify-content: start;
-	gap: 5rem;
 	margin: 0.6rem 0;
 }
 
